[package]
name = "math2img"
version = "0.1.2"
edition = "2021"
authors = ["gw31415 <git@amas.dev>"]
description = "Convert mathematical expressions into images"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
mathjax_svg = "0.1.0"
resvg = "0.36.0"
rustyline = "12.0.0"
tiny-skia = "0.11.2"
