[package]
name = "math2img"
version = "0.1.9"
edition = "2021"
authors = ["gw31415 <git@amas.dev>"]
description = "Convert mathematical expressions into images"
license = "Apache-2.0"
repository = "https://github.com/gw31415/math2img"
categories = ["command-line-interface"]
keywords = ["cli", "svg", "tex", "png", "mathjax"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
clap_complete = "4.4.4"
mathjax_svg = "3.1.2"
resvg = "0.37.0"
rustyline = "13.0.0"
tiny-skia = "0.11.2"
